# ZagHop

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
doc/: Doxyfile  InputManual.tex
interface/: .quantics_inter.f90.kate-swp  bagel.py  cfour.py  file_utils.py  interface.py  orca.py  quantics_inter.f90  run.py  run_nstate.py  turbomole.py  turbomole_nstate.py
scripts/: align.py  io_xyz.py  measure.py  normalmode.py  spectrum.py  spectrum_txt.py  states.py  wigner.py
src/core/: .control_var.f90.kate-swp  constants.f90  control_var.f90  decoherence.f90  hopping.f90  input.f90  interface.f90  main.f90  model.f90  npi.f90  nuclear_dyn.f90  ode_call.f90  phase.f90  rattle.f90  sh_fssh.f90  sh_ldiab.f90  sh_lz.f90  system_var.f90  tdc.f90
src/util/: assignment_problem.f90  file.f90  global_defs.f90  ivec.f90  linalg_wrapper.f90  matrix.f90  ode.f90  orthog.f90  random.f90  random_pcg.f90  sort.f90  string.f90  timing.f90
tests/: test.py  test_interface.py  test_zaghop.py
tests/gsmd_h2o/: dynamics.in  geom
tests/gsmd_h2o/Reference/: geometry
tests/gsmd_h2o/qmdir/: basis  control  coord  mos
tests/integration/: test_interface.py  test_zaghop.py
tests/integration/fssh_tullyI/: dynamics.in
tests/integration/fssh_tullyI/Reference/: geometry
tests/integration/ldsh_pyrazine/: dynamics.in  veloc
tests/integration/ldsh_pyrazine/qmdir/: auxbasis
tests/integration/ldsh_tullyI/: dynamics.in
tests/integration/ldsh_tullyI/Reference/: geometry
tests/integration/lzsh_tullyI/Reference/: geometry
tests/ld-fssh_pyrazine/qmdir/: coord
tests/ldsh_tullyI/: geom
tests/lzsh_tullyI/: dynamics.in
tests/turbomole_adc2_pyrazine/: dynamics.in  geom
tests/turbomole_adc2_pyrazine/Reference/: geometry  gradient  overlap  trajectory.xyz  velocity
tests/turbomole_adc2_pyrazine/qmdir/: basis  control  mos
tests/unit/: linalg_test.f90  util_test.f90
